1998-12-07  Havoc Pennington  <hp@pobox.com>

	* gnome-dialog.h, gnome-dialog.c 
	(gnome_dialog_run_and_hide): removed. 
	(gnome_dialog_set_destroy): removed. 
	(gnome_dialog_run_modal): removed. 
	(gnome_dialog_run_and_destroy): removed.
	(gnome_dialog_set_modal): removed.
	(struct _GnomeDialog): Remove 'parent' member since
	GtkWindow has one now.
	
	* gnome-dialog.c (gnome_dialog_set_parent): Call
	gtk_window_set_transient_for() to attach dialog to its parent.
	Nearly all dialogs should call gnome_dialog_set_parent() now!		
	
1998-12-08  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi-child.[ch], gnome-mdi-generic-child.[ch]:
	some cosmetic fixes. added almost all documentation.
	* gnome-mdi.c: some doc fixes.
	
Sun Dec  6 22:40:23 1998  Raph Levien  <raph@gimp.org>

	* gnome-canvas.h:
	* gnome-canvas.c: Added basic support for antialiased rendering.
	It's overeager to repaint (for example, any time an item gets
	translated, the entire bounding box gets repainted). There is
	no support yet for affine transformations or clip paths. However,
	I feel that the basic concept is sound.

	* gnome-canvas-rect-ellipse.h:
	* gnome-canvas-rect-ellipse.c: I am using the rect-ellipse item as
	the basic testbed for adding antialiased rendering. It's certainly
	not perfect yet, but it basically works in the test-gnome demo.

1998-12-07  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.c: slight indentation changes. added documentation
	to public functions.

1998-12-05  Jeff Garzik  <jgarzik@pobox.com>

	* gnome-href.[ch]:
	Made const-correct.
	Added API docs.
	Small formatting cleanups (judicious use of blank lines).
	gnome_href_new() returns NULL if url arg is NULL.  (this is
	implied with gnome_href_set_url checks)

1998-12-03  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-about.c (gnome_about_new): I got a bit carried away.

1998-12-04  Jaka Mocnik <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.h: removed GNOME_MDI_REDRAW enum.